builderrorwordmiro/Build wordmiro_2025-08-19T13-12-44.txt

Showing Recent Errors Only

Build target wordmiro of project wordmiro with configuration Debug

SwiftCompile normal arm64 Compiling\ CanvasViewModel.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/ViewModels/CanvasViewModel.swift (in target 'wordmiro' from project 'wordmiro')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Models/LLMProvider.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/ContentView.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Models/RelationType.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/DetailCardView.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Models/WordEdge.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/NodeView.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Models/WordNode.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/SettingsView.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/StudyModeView.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Services/AnthropicService.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Services/KeychainService.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/WordMiroApp.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Services/LayoutService.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Services/LLMService.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Services/OpenAIService.swift -primary-file /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/ViewModels/CanvasViewModel.swift /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/Views/CanvasView.swift -emit-dependencies-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.d -emit-const-values-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.swiftconstvalues -emit-reference-dependencies-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.swiftdeps -serialize-diagnostics-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.dia -emit-localized-strings -emit-localized-strings-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64 -target arm64-apple-ios18.5-simulator -Xllvm -aarch64-use-tbi -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator18.5.sdk -I /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Products/Debug-iphonesimulator -F /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Products/Debug-iphonesimulator -no-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=5 -module-cache-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/wordmiro_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/hiroshikodera/repos/_active/apps/wordmiro -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -file-compilation-dir /Users/hiroshikodera/repos/_active/apps/wordmiro -Xcc -ivfsstatcache -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator18.5-22F76-d5fc8ad4295d2ef488fb7d0f804ce0c4.sdkstatcache -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/wordmiro-generated-files.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/wordmiro-own-target-headers.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/wordmiro-all-target-headers.hmap -Xcc -iquote -Xcc /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/wordmiro-project-headers.hmap -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/DerivedSources-normal/arm64 -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/DerivedSources/arm64 -Xcc -I/Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/DerivedSources -Xcc -DDEBUG\=1 -module-name wordmiro -frontend-parseable-output -disable-clang-spi -target-sdk-version 18.5 -target-sdk-name iphonesimulator18.5 -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/local/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/local/lib/swift/host/plugins -o /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Build/Intermediates.noindex/wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.o -index-unit-output-path /wordmiro.build/Debug-iphonesimulator/wordmiro.build/Objects-normal/arm64/CanvasViewModel.o -index-store-path /Users/hiroshikodera/Library/Developer/Xcode/DerivedData/wordmiro-dronapkgujbbvhhirwryasltrmuo/Index.noindex/DataStore -index-system-modules

SwiftCompile normal arm64 /Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/ViewModels/CanvasViewModel.swift (in target 'wordmiro' from project 'wordmiro')
    cd /Users/hiroshikodera/repos/_active/apps/wordmiro
    

/Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/ViewModels/CanvasViewModel.swift:209:21: error: expected expression in 'return' statement
            return !try modelContext.fetch(descriptor).isEmpty
                    ^

/Users/hiroshikodera/repos/_active/apps/wordmiro/wordmiro/ViewModels/CanvasViewModel.swift:209:21: Expected expression in 'return' statement



Build failed    2025-08-19, 1:12 PM    3.9 seconds
